--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,53 +1,39 @@
 .container
-    width: 90%
-    margin: 10px auto
+    width: 100%
+    margin: 5px auto
     display: flex
     flex-direction: column
 
-.game__field, .footer
-    width: 100vmin
-    margin: 0 auto
+.title, .footer
+    width: 80vmin
+    margin: 10px auto 0
+    display: flex
 
 .title
-    width: 100vmin
-    margin: 10px auto
-    display: flex
-    justify-content: space-around
+    justify-content: space-between
 
-.game__block
-    width: 100%
-    display: flex
+.footer
     justify-content: center
 
-.score__block
-    width: 100%
-    height: 90vmin
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
+.player__score, .comp__score
+    font-size: 2rem
+    font-weight: bold
 
-.player-name
-    font-size: 3em
+.player__score
     color: darkgreen
 
-.player-score
-    font-size: 5em
-    font-weight: bold
-    color: blueviolet
+.comp__score
+    color: maroon
 
 .game__field
-    width: 90vmin
-    height: 90vmin
+    width: 80vmin
+    height: 80vmin
+    margin: 0 auto
     border: 1px dashed blue
 
 .game__field-row
     width: 100%
-    height: 9vmin
+    height: 8vmin
     display: flex
     flex-wrap: nowrap
     border: 1px solid black
-
-@media(max-width: 1024px)
-    .score__block
-        display: none
