--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,44 @@
 <div class="container">
 
     <div class="title">
-        <p class="player__score">{{ playerScore }}</p>
+        <p class="player__score" [ngStyle]="{ color: playerColor }">{{ playerScore }}</p>
         <div>
             Delay, ms: <input type="number" min="100" max="5000" step="100" [(ngModel)]="delay">
         </div>
-        <p class="comp__score">{{ compScore }}</p>
+        <p class="comp__score" [ngStyle]="{ color: compColor}">{{ compScore }}</p>
     </div>
 
     <div class="game__field">
-        <div class="game__field-row" *ngFor="let row of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]">
-            <app-square *ngFor="let item of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"></app-square>
+        <div class="game__field-row" *ngFor="let row of field; let rowIdx = index">
+            <app-square
+                *ngFor="let item of row; let idx = index"
+                [color]="item"
+                (onClicked)="cellClicked({ row: rowIdx, col: idx })">
+            </app-square>
         </div>
     </div>
 
     <div class="footer">
-        <button type="button" class="btn btn-primary">Start game!</button>
+        <button type="button" class="btn btn-primary" [disabled]="game" (click)="startGame()">Start game!</button>
+    </div>
+
+    <div class="modal" id="myModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Game Over</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>{{ finalText }}</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
