--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="container">
 
     <div class="title">
-        <p class="player__score" [ngStyle]="{ color: playerColor }">{{ playerScore }}</p>
+        <p class="player__score" [ngStyle]="{ color: colors.playerColor }">{{ scores.playerScore }}</p>
         <div>
             Delay, ms: <input type="number" min="100" max="5000" step="100" [(ngModel)]="delay">
         </div>
-        <p class="comp__score" [ngStyle]="{ color: compColor}">{{ compScore }}</p>
+        <p class="comp__score" [ngStyle]="{ color: colors.compColor}">{{ scores.compScore }}</p>
     </div>
 
     <div class="game__field">
